--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,18 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".AzApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".AzApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AZProducts">
+        <activity
+            android:name=".products.ProductsActivity"
+            android:exported="true"
+            android:label="@string/title_activity_products"
+            android:theme="@style/Theme.AZProducts.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
